dbeaver/pro#6222 Fix CTE aliases in FROM, fix tail scope